# buki

./: .gitignore  CHANGELOG.md  Design  LICENSE  cabal.project  flake.nix
backend/: buki-backend.cabal
backend/lib/Buki/: Err.hs  Model.hs  Types.hs  Union.hs  Validation.hs
backend/lib/Buki/Backend/: .#User.hs  Auth.hs  Book.hs  IsbnLookup.hs  Kidsgroup.hs  Place.hs  Session.hs  User.hs
backend/lib/Buki/Backend/Common/: Op.hs
backend/lib/Buki/Eff/: Db.hs  FileStorage.hs  IsbnLookup.hs  Settings.hs  Time.hs
backend/lib/Buki/Eff/Db/: Catch.hs  Eff.hs  Util.hs
backend/lib/Buki/Model/: Book.hs  BookCopy.hs  BookTagLink.hs  Id.hs  Kidsgroup.hs  Loan.hs  LoanRange.hs  LoanState.hs  Permissions.hs  Place.hs  Session.hs  SqlType.hs  TH.hs  Tables.hs  Tag.hs  Types.hs  User.hs  UserBookFavorite.hs  UserKidsgroupLink.hs
backend/lib/Buki/Model/Types/: Book.hs  BookCopy.hs  BookTagLink.hs  Id.hs  Kidsgroup.hs  Loan.hs  LoanRange.hs  LoanState.hs  Permissions.hs  Place.hs  Session.hs  Tag.hs  User.hs  UserBookFavorite.hs  UserKidsgroupLink.hs
backend/lib/Buki/Model/Util/: SqlType.hs  TH.hs
backend/lib/Buki/Types/: EmailAddress.hs  Identifier.hs  Isbn.hs  Name.hs  Password.hs
backend/schema/: current.sql  dropAll.sql
backend/test/: Main.hs
backend/test/Buki/Test/: Union.hs  Validation.hs
backend/test/Buki/Test/Backend/: Dummy.hs  Kidsgroup.hs  Session.hs  User.hs
backend/test/Buki/Test/Backend/Dummy/: Common.hs  Kidsgroup.hs  User.hs
backend/test/Buki/TestDataBuilder/: User.hs
backend/test/Buki/TestUtil/: Err.hs  Psql.hs
schema/: current.sql
scripts/: startdb.sh
staticfrontend/: buki-staticfrontend.cabal
staticfrontend/app/: Main.hs
staticfrontend/lib/: DevelMain.hs
staticfrontend/lib/Buki/StaticFrontend/: Server.hs
staticfrontend/lib/Buki/StaticFrontend/Core/: AppM.hs  Auth.hs  FormValidation.hs  HtmlContent.hs  ViewM.hs
staticfrontend/lib/Buki/StaticFrontend/Core/Preludes/: API.hs
staticfrontend/lib/Buki/StaticFrontend/Core/Views/: Forms.hs  Menu.hs  Message.hs  RegularPage.hs
staticfrontend/lib/Buki/StaticFrontend/Place/: API.hs
staticfrontend/lib/Buki/StaticFrontend/Static/: API.hs  Server.hs
staticfrontend/lib/Buki/StaticFrontend/User/: Server.hs
staticfrontend/lib/Buki/StaticFrontend/User/Login/: API.hs  Controller.hs  Types.hs  Views.hs
staticfrontend/lib/Buki/StaticFrontend/User/Registration/: API.hs  Controller.hs  Types.hs  Views.hs
staticfrontend/lib/Buki/StaticFrontend/Welcome/: API.hs  Controller.hs  Views.hs
staticfrontend/static/css/: buki.css
