cabal-version: 3.4
name: buki-backend
version: 0.1.0.0
homepage: https://bu-ki.at/
license: NONE
author: Markus Mayr
maintainer: markus.mayr@outlook.com
category: Web
build-type: Simple
common warnings
    ghc-options: -Wall

flag Devel
     default: False
     description: Enable development dependencies and features.
     manual: True

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Buki.Eff.Db
                    , Buki.Eff.Time
                    , Buki.Err
                    , Buki.Backend.Auth
                    , Buki.Backend.Kidsgroup
                    , Buki.Backend.Session
                    , Buki.Backend.User
                    , Buki.Model.Tables
                    , Buki.Model.Types
                    , Buki.Types
                    , Buki.Union
                    , Buki.Validation
                    , Buki.Model.Types.Book
                    , Buki.Model.Types.BookCopy
                    , Buki.Model.Types.BookTagLink
                    , Buki.Model.Types.Id
                    , Buki.Model.Types.Kidsgroup
                    , Buki.Model.Types.Loan
                    , Buki.Model.Types.LoanRange
                    , Buki.Model.Types.LoanState
                    , Buki.Model.Types.Permissions
                    , Buki.Model.Types.Place
                    , Buki.Model.Types.Session
                    , Buki.Model.Types.Tag
                    , Buki.Model.Types.User
                    , Buki.Model.Types.UserBookFavorite
                    , Buki.Model.Types.UserKidsgroupLink
                    , Buki.Model.TH
                    , Buki.Types.EmailAddress
                    , Buki.Types.Name
                    , Buki.Types.Password

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TemplateHaskell
                      , LambdaCase
                      , FunctionalDependencies
                      , DataKinds
                      , TypeFamilies
                      , OverloadedStrings
                      , UnicodeSyntax

    -- Other library packages from which modules are imported.
    build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , data-default
                    , effectful-core
                    , effectful-th
                    , effectful-plugin
                    , exceptions
                    , lens
                    , log-base
                    , log-effectful
                    , mtl
                    , opaleye >= 0.9.6.1
                    , postgresql-simple
                    , product-profunctors
                    , scrypt
                    , template-haskell
                    , text
                    , time
                    , uuid
                    , validation

    -- Directories containing source files.
    hs-source-dirs:   lib

    -- Base language which the package is written in.
    default-language: GHC2021

    ghc-options: -fplugin=Effectful.Plugin

test-suite buki-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    other-modules:    Buki.Test.Backend.Dummy
                    , Buki.Test.Backend.Dummy.Common
                    , Buki.Test.Backend.Dummy.Kidsgroup
                    , Buki.Test.Backend.Dummy.User
                    , Buki.Test.Backend.Kidsgroup
                    , Buki.Test.Backend.Session
                    , Buki.Test.Backend.User
                    , Buki.Test.Validation
                    , Buki.Test.Union
                    , Buki.TestUtil.Err
                    , Buki.TestUtil.Psql

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TemplateHaskell
                    , LambdaCase
                    , FunctionalDependencies
                    , DataKinds
                    , TypeFamilies
                    , OverloadedStrings

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:    base
                    , buki-backend
                    , bytestring
                    , containers
                    , directory
                    , effectful-core
                    , exceptions
                    , hspec
                    , temporary ^>= 1.3
                    , text
                    , typed-process ^>= 0.2
                    , uuid
                    , postgresql-simple
                    , validation
