cabal-version: 3.4
name: buki-backend
version: 0.1.0.0
homepage: https://bu-ki.at/
license: NONE
author: Markus Mayr
maintainer: markus.mayr@outlook.com
category: Web
build-type: Simple
common warnings
    ghc-options: -Wall

flag Devel
     default: False
     description: Enable development dependencies and features.
     manual: True

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Buki.Eff.Db
                    , Buki.Eff.Db.Catch
                    , Buki.Eff.Db.Eff
                    , Buki.Eff.Db.Util
                    , Buki.Eff.FileStorage
                    , Buki.Eff.IsbnLookup
                    , Buki.Eff.Settings
                    , Buki.Eff.Time
                    , Buki.Err
                    , Buki.Backend.Auth
                    , Buki.Backend.Book
                    , Buki.Backend.Common.Op
                    , Buki.Backend.Kidsgroup
                    , Buki.Backend.Place
                    , Buki.Backend.Session
                    , Buki.Backend.User
                    , Buki.Types
                    , Buki.Union
                    , Buki.Validation
                    , Buki.Model
                    , Buki.Model.Book
                    , Buki.Model.BookCopy
                    , Buki.Model.BookTagLink
                    , Buki.Model.Id
                    , Buki.Model.Kidsgroup
                    , Buki.Model.Loan
                    , Buki.Model.LoanRange
                    , Buki.Model.LoanState
                    , Buki.Model.Permissions
                    , Buki.Model.Place
                    , Buki.Model.Session
                    , Buki.Model.Tag
                    , Buki.Model.User
                    , Buki.Model.UserBookFavorite
                    , Buki.Model.UserKidsgroupLink
                    , Buki.Model.Util.TH
                    , Buki.Model.Util.SqlType
                    , Buki.Types.EmailAddress
                    , Buki.Types.Name
                    , Buki.Types.Password

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TemplateHaskell
                      , LambdaCase
                      , FunctionalDependencies
                      , DataKinds
                      , TypeFamilies
                      , OverloadedStrings
                      , UnicodeSyntax

    -- Other library packages from which modules are imported.
    build-depends:    base
                    , aeson
                    , bytestring
                    , containers
                    , data-default
                    , directory
                    , effectful-core
                    , effectful-th
                    , effectful-plugin
                    , exceptions
                    , extra
                    , isbn
                    , lens
                    , log-base
                    , log-effectful
                    , mtl
                    , opaleye >= 0.9.6.1
                    , postgresql-simple
                    , product-profunctors
                    , scrypt
                    , template-haskell
                    , text
                    , time
                    , uuid
                    , validation

    -- Directories containing source files.
    hs-source-dirs:   lib

    -- Base language which the package is written in.
    default-language: GHC2021

    ghc-options: -fplugin=Effectful.Plugin

test-suite buki-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2021

    -- Modules included in this executable, other than Main.
    other-modules:    Buki.Test.Backend.Dummy
                    , Buki.Test.Backend.Dummy.Common
                    , Buki.Test.Backend.Dummy.Kidsgroup
                    , Buki.Test.Backend.Dummy.User
                    , Buki.Test.Backend.Kidsgroup
                    , Buki.Test.Backend.Session
                    , Buki.Test.Backend.User
                    , Buki.Test.Validation
                    , Buki.Test.Union
                    , Buki.TestUtil.Err
                    , Buki.TestUtil.Psql

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: TemplateHaskell
                    , LambdaCase
                    , FunctionalDependencies
                    , DataKinds
                    , TypeFamilies
                    , OverloadedStrings

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:    base
                    , buki-backend
                    , bytestring
                    , containers
                    , data-default
                    , directory
                    , effectful-core
                    , exceptions
                    , hspec
                    , lens
                    , temporary ^>= 1.3
                    , text
                    , typed-process ^>= 0.2
                    , uuid
                    , postgresql-simple
                    , validation
